fixed overflow x axis

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Poppins:wght@500&family=Teko:wght@300&display=swap");
 
+html,
+body {
+  max-width: 100% !important;
+  overflow: hidden;
+}
+
 #landing-page {
   min-height: 100vh;
   width: 100%;
@@ -14,7 +20,6 @@
   background-size: cover;
   background-position: center;
   padding-top: 35vh;
-  overflow: inline-block;
 }
 h1,
 h2,
